force-app/main/default/objects/Booth_Style__c/Booth_Style__c.object-meta.xml
<CustomObject>
    <label>Booth Style</label>
    <nameField>
        <displayFormat>BS-{YYYY}{MM}-{0}</displayFormat>
        <label>Booth Style Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Styles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>