force-app/main/default/objects/Booth_Style__c/fields/Booth_Num__c.field-meta.xml
<CustomField>
    <fullName>Booth_Num__c</fullName>
    <label>Booth Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>