force-app/main/default/objects/Booth_Style__c/fields/Booth_Style__c.field-meta.xml
<CustomField>
    <fullName>Booth_Style__c</fullName>
    <label>Booth Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HallofHarmony</fullName>
                <label>Hall Of Harmony</label>
            </value>
            <value>
                <fullName>SpecializedHall</fullName>
                <label>Specialized Hall</label>
            </value>
            <value>
                <fullName>IslandPlatform</fullName>
                <label>Island Platform</label>
            </value>
            <value>
                <fullName>OnTheWall</fullName>
                <label>On The wall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>