force-app/main/default/objects/Booth_Style__c/fields/Is_High_Booth__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Booth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否高端展台</description>
    <label>Is High Booth</label>
    <type>Checkbox</type>
</CustomField>