force-app/main/default/objects/Booth_Style__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Booth Styles</relationshipLabel>
    <relationshipName>Booth_Styles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>